--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS Positioning Exercise</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Exercise 5 style.css">
 </head>
 <body>
 <!-- Don't change anything here! -->
